# MissionBackup

./: index.html  package.json  pnpm-lock.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: mod.rs  notify.rs  screensaver.rs  system.rs  watcher.rs
src-tauri/src/core/: cmd.rs  mod.rs  setup.rs  state.rs  tray.rs  window.rs
src-tauri/src/db/: backup.rs  ignore.rs  mission.rs  mod.rs  procedure.rs  utils.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/utils/: common.rs  compress.rs  crypto.rs  explorer.rs  logger.rs  mod.rs
