[package]
name = "mission-backup"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mission_backup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2"
dark-light = "1.1.1"
wry = "0.47.0"
rand = "0.8.5"
sys-locale = "0.3.2"
base64 = "0.22.1"
url = "2.5.3"
sha2 = "0.10.8"
zip = "2.2.0"
tar = "0.4.43"
flate2 = "1.0.35"
bzip2 = "0.4.4"
xz2 = "0.1.7"
sevenz-rust= {version="0.6.1", features= ["compress"] }
walkdir = "2.5.0"
anyhow = "1.0.93"
ignore = "0.4.23"
fs_extra = "1.3.0"
byte-unit = "5.1.6"

[dev-dependencies]
same-file = "1.0.6"
